maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: 'while' expected but '}' found.
}
^Escaper:31: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:55: error: Unmatched closing brace '}' ignored here
}
^